@@ -1,3 +1,8 @@
+2002-02-14  Richard Hestilow  <hestilow@ximian.com>
+
+	* keyboard-properties.c: Change configuration
+	key prefix to CAPPLET_CONFIG_PREFIX/keyboard-properties.
+	
 2001-11-16  Bradford Hovinen  <hovinen@ximian.com>
 
 	* Makefile.am (EXTRA_DIST): Remove $(oaf_DATA).in
